
7.43  2017-08-18

7.42  2017-08-17
  - Improved Mojo::Base role support with shorthands.
      MyClass->with_roles('MyClass::Role::Foo')
    becomes
      MyClass->with_roles('+Foo')

7.41  2017-08-15
  - Added with_roles method to Mojo::ByteStream, Mojo::Collection, Mojo::DOM and
    Mojo::File.

7.40  2017-08-14
  - Added support for Role::Tiny extensions to all classes based on Mojo::Base.
    (dotan)
  - Added with_roles method to Mojo::Base. (dotan)
  - Added the guide Mojolicious::Guides::Testing. (scottw)
  - Replaced systemd detection in Mojo::Log with the MOJO_LOG_SHORT environment
    variable, since there is no reliable way to detect systemd.

7.39  2017-08-03
  - Removed experimental close_idle_connections method from
    Mojo::Server::Daemon.
  - Increased default graceful_timeout from 60 to 120 seconds in
    Mojo::Server::Prefork.
  - Improve Mojo::Server::Daemon to log request errors.
  - Fixed a bug where Mojo::Server::Daemon would close connections too quickly
    and interrupt requests.

7.38  2017-07-30
  - Added extra attribute to Mojolicious::Static. (jabberwok)
  - Improve Mojo::URL performance significantly.
  - Fixed memory leak in Mojo::URL that was caused by a Perl 5.24 bug.

7.37  2017-07-21
  - Added slugify method to Mojo::ByteStream. (Grinnz)
  - Added slugify function to Mojo::Util. (Grinnz)
  - Fixed bugs in Mojo::IOLoop and Mojo::Reactor::Poll that would prevent a
    reset from clearing events.

7.36  2017-07-09
  - Fixed basename method in Mojo::File to work with relative paths. (jberger)
  - Fixed a bug where Mojo::Log could not correctly identify if it was deployed
    with systemd.
  - Fixed Mojo::HelloWorld to actually be a Mojolicious subclass.

7.35  2017-07-05
  - Removed deprecated watch attribute from Mojo::Server::Morbo.
  - Added spare attribute to Mojo::Server::Prefork.
  - Added -s option to prefork command.
  - Added fd option to Mojo::IOLoop::Server::listen.
  - Added fd parameter to Mojo::Server::Daemon::listen.