@@ -6,7 +6,8 @@ use utf8;
 use feature ();
 
 # No imports because we get subclassed, a lot!
-use Carp ();
+use Carp         ();
+use Scalar::Util ();
 
 # Only Perl 5.14+ requires it on demand
 use IO::Handle ();
@@ -107,9 +108,14 @@ sub tap {
 
 sub with_roles {
   Carp::croak 'Role::Tiny 2.000001+ is required for roles' unless ROLES;
-  my $class = shift;
-  return Role::Tiny->create_class_with_roles($class,
-    map { /^\+(.+)$/ ? "${class}::Role::$1" : $_ } @_);
+  my ($self, @roles) = @_;
+
+  return Role::Tiny->create_class_with_roles($self,
+    map { /^\+(.+)$/ ? "${self}::Role::$1" : $_ } @roles)
+    unless my $class = Scalar::Util::blessed $self;
+
+  return Role::Tiny->apply_roles_to_object($self,
+    map { /^\+(.+)$/ ? "${class}::Role::$1" : $_ } @roles);
 }
 
 1;
@@ -251,9 +257,10 @@ spliced or tapped into) a chained set of object method calls.
 
   my $new_class = SubClass->with_roles('SubClass::Role::One');
   my $new_class = SubClass->with_roles('+One', '+Two');
+  $object       = $object->with_roles('+One', '+Two');
 
-Create and return a new class that extends the given class with one or more
-L<Role::Tiny> roles. For roles following the naming scheme
+Create a new class with one or more L<Role::Tiny> roles and return it, or
+rebless the given object into it. For roles following the naming scheme
 C<MyClass::Role::RoleName> you can use the shorthand C<+RoleName>. Note that
 role support depends on L<Role::Tiny> (2.000001+).
 
